--- a/calculators-for-words.html
+++ b/calculators-for-words.html
@@ -490,15 +490,20 @@ Dr Inês Hipolito
 <li>it stores the representations of the statistical relationships between tokens.</li>
 <li>In our map-metaphor, we can call them <strong>traces</strong>.</li>
 </ul></li>
+<li>The relationships stored in the model’s weights are a map with no territory.</li>
 </ul>
+<p><strong>A trace is a correspondence of a sign/token output by an LLM which has a referent useful to the user.</strong></p>
 </section>
 <section id="technique" class="slide level2">
 <h2>Technique</h2>
 <ul>
 <li>We propose that the skill of using these tools, the core of the technique, is that of navigating between infinite maps.</li>
-<li>The relationships stored in the model’s weights are a map with no territory.</li>
-<li>Instead, it is a palimpsest of many maps, superimposed so broadly as to specifically correspond with the traces from many territories.</li>
+<li>An LLM produces tokens based on weighted likeihood of all preceeding tokens in the context window. An effective metaphor establishes how a user can popualte the context window so that the path of least perplexity is the path with the output they desire.</li>
+<li>To communicate this, the idea of <em>navigation</em> exists, such that there is always a starting point (Simon’s calculator input), and then decisions leading to an output (Bocci’s refutation)</li>
 </ul>
+<p>Traces!</p>
+<p>Selection which elevates it to meaning</p>
+<p><strong>The effective metaphor of prompting, is that of navigating these infinite maps.</strong></p>
 </section>
 <section id="the-requirements-of-expertise" class="slide level2">
 <h2>The requirements of expertise</h2>
