--- a/calculators-for-words.html
+++ b/calculators-for-words.html
@@ -369,6 +369,19 @@ Dr Inês Hipolito
 <p>Pray, Mr.&nbsp;Babbage, if you put into the machine wrong figures, will the right answers come out?</p>
 </blockquote>
 <p><span class="citation" data-cites="babbage_passages_1864">(<a href="#/bibilography" role="doc-biblioref" onclick="">Babbage 1864</a>)</span></p>
+<aside class="notes">
+<p>Speaker notes go here.</p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 <section id="motivation" class="slide level2">
 <h2>Motivation</h2>
