--- a/calculators-for-words.html
+++ b/calculators-for-words.html
@@ -389,6 +389,7 @@ Dr Inês Hipolito
 <li>Why are we here?</li>
 <li>Why is the metaphor a problem?</li>
 <li>Why continue this discussion?</li>
+<li>bla bla XXX</li>
 </ul>
 </section>
 <section id="aim" class="slide level2">
